model build 021022 150 AM

--- a/ASB_CECL_ModelBuild_Python_021022.ipynb
+++ b/ASB_CECL_ModelBuild_Python_021022.ipynb
@@ -1009,6 +1009,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "id": "a63c3cf6-246d-4d92-b470-5355f4d8270a",
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.95522661e-02, 9.70447734e-01],\n",
+       "       [2.22884572e-04, 9.99777115e-01],\n",
+       "       [1.26784917e-02, 9.87321508e-01],\n",
+       "       ...,\n",
+       "       [1.74205099e-04, 9.99825795e-01],\n",
+       "       [8.28837998e-01, 1.71162002e-01],\n",
+       "       [2.65203483e-01, 7.34796517e-01]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_probs"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {
     "id": "09863c813e464d98883191c3f4ae8f7e",
