models built and plot functions

--- a/ASB_CECL_Data_Transform_020222.ipynb
+++ b/ASB_CECL_Data_Transform_020222.ipynb
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "id": "143391baf5094155879fb88d85c8528b",
     "tags": []
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "id": "66be5f29a13d47c58157cf2dbce32eca",
     "tags": []
@@ -489,7 +489,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,6 +499,392 @@
     "\n",
     "df2 = transform_mydata(data)\n",
     "df2.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "id": "1c0c8a20-071a-4d1b-a71d-ead9aa1a5426"
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>YARDSTOGO</th>\n",
+       "      <th>SCOREDIFF</th>\n",
+       "      <th>TIMELEFT</th>\n",
+       "      <th>TRUEFIELD</th>\n",
+       "      <th>CONCEPT_8</th>\n",
+       "      <th>CONCEPT_9</th>\n",
+       "      <th>YARDSGAINED_Mean</th>\n",
+       "      <th>AVG_OVER_TOGO</th>\n",
+       "      <th>prob_FIRST</th>\n",
+       "      <th>TARGET_1ST</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PLAYID_RUN1</th>\n",
+       "      <th>PLAYID_RUN2</th>\n",
+       "      <th>PLAYID_RUN3</th>\n",
+       "      <th>PLAYID_RUN5</th>\n",
+       "      <th>TEE_SHORT</th>\n",
+       "      <th>TEE_MED</th>\n",
+       "      <th>TEE_LONG</th>\n",
+       "      <th>TEE_XLONG</th>\n",
+       "      <th>DOWNNAME_1st</th>\n",
+       "      <th>DOWNNAME_3rd</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>480</td>\n",
+       "      <td>35</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.360000</td>\n",
+       "      <td>1.272000</td>\n",
+       "      <td>0.437594</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>9</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>45</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4.756098</td>\n",
+       "      <td>0.528455</td>\n",
+       "      <td>0.560704</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4</td>\n",
+       "      <td>7</td>\n",
+       "      <td>600</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8.164835</td>\n",
+       "      <td>2.041209</td>\n",
+       "      <td>0.608032</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>11</td>\n",
+       "      <td>7</td>\n",
+       "      <td>180</td>\n",
+       "      <td>45</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6.216667</td>\n",
+       "      <td>0.565152</td>\n",
+       "      <td>0.323197</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13.416667</td>\n",
+       "      <td>13.416667</td>\n",
+       "      <td>0.391505</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>35</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>6.430769</td>\n",
+       "      <td>1.286154</td>\n",
+       "      <td>0.467382</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>11</td>\n",
+       "      <td>-7</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>35</td>\n",
+       "      <td>8</td>\n",
+       "      <td>5</td>\n",
+       "      <td>13.416667</td>\n",
+       "      <td>1.219697</td>\n",
+       "      <td>0.294593</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>25</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>6.005976</td>\n",
+       "      <td>1.501494</td>\n",
+       "      <td>0.612723</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>900</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>9</td>\n",
+       "      <td>8.164835</td>\n",
+       "      <td>4.082418</td>\n",
+       "      <td>0.603927</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "      <td>900</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>13.703540</td>\n",
+       "      <td>2.283923</td>\n",
+       "      <td>0.668898</td>\n",
+       "      <td>1</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 28 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      YARDSTOGO  SCOREDIFF  TIMELEFT  TRUEFIELD  CONCEPT_8  CONCEPT_9  \\\n",
+       "0             5          0       480         35          2          0   \n",
+       "1             9         -7      1050         45          5          4   \n",
+       "2             4          7       600          5          4          9   \n",
+       "3            11          7       180         45          4          1   \n",
+       "4             1          0        60         45          8          5   \n",
+       "...         ...        ...       ...        ...        ...        ...   \n",
+       "9995          5          0        30         35          1          9   \n",
+       "9996         11         -7      1200         35          8          5   \n",
+       "9997          4          0      1050         25          3          3   \n",
+       "9998          2          7       900          5          4          9   \n",
+       "9999          6          7       900         35          6          9   \n",
+       "\n",
+       "      YARDSGAINED_Mean  AVG_OVER_TOGO  prob_FIRST  TARGET_1ST  ...  \\\n",
+       "0             6.360000       1.272000    0.437594           0  ...   \n",
+       "1             4.756098       0.528455    0.560704           1  ...   \n",
+       "2             8.164835       2.041209    0.608032           1  ...   \n",
+       "3             6.216667       0.565152    0.323197           0  ...   \n",
+       "4            13.416667      13.416667    0.391505           0  ...   \n",
+       "...                ...            ...         ...         ...  ...   \n",
+       "9995          6.430769       1.286154    0.467382           0  ...   \n",
+       "9996         13.416667       1.219697    0.294593           0  ...   \n",
+       "9997          6.005976       1.501494    0.612723           1  ...   \n",
+       "9998          8.164835       4.082418    0.603927           1  ...   \n",
+       "9999         13.703540       2.283923    0.668898           1  ...   \n",
+       "\n",
+       "     PLAYID_RUN1  PLAYID_RUN2  PLAYID_RUN3  PLAYID_RUN5  TEE_SHORT  TEE_MED  \\\n",
+       "0              0            1            0            0          0        1   \n",
+       "1              0            0            0            1          0        0   \n",
+       "2              0            0            0            0          0        1   \n",
+       "3              0            0            0            0          0        0   \n",
+       "4              0            0            0            0          1        0   \n",
+       "...          ...          ...          ...          ...        ...      ...   \n",
+       "9995           1            0            0            0          0        1   \n",
+       "9996           0            0            0            0          0        0   \n",
+       "9997           0            0            1            0          0        1   \n",
+       "9998           0            0            0            0          1        0   \n",
+       "9999           0            0            0            0          0        1   \n",
+       "\n",
+       "      TEE_LONG  TEE_XLONG  DOWNNAME_1st  DOWNNAME_3rd  \n",
+       "0            0          0             1             0  \n",
+       "1            1          0             1             0  \n",
+       "2            0          0             0             1  \n",
+       "3            0          1             1             0  \n",
+       "4            0          0             1             0  \n",
+       "...        ...        ...           ...           ...  \n",
+       "9995         0          0             0             1  \n",
+       "9996         0          1             0             1  \n",
+       "9997         0          0             0             1  \n",
+       "9998         0          0             0             1  \n",
+       "9999         0          0             0             1  \n",
+       "\n",
+       "[10000 rows x 28 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2['Process Time'] = "
    ]
   },
   {
@@ -535,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "id": "fc0c60e9-135f-48c5-baa5-f03239eaf7d5",
     "tags": []
@@ -543,46 +929,13 @@
    "outputs": [],
    "source": [
     "from ibm_watson_studio_lib import access_project_or_space\n",
-    "wslib = access_project_or_space()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "id": "7c7d7596-d582-4303-aa57-f9ba27d15ac2",
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'name': 'transf_data.csv',\n",
-       " 'asset_type': 'data_asset',\n",
-       " 'asset_id': 'data_asset.transfdatacsv',\n",
-       " 'attachment_id': '2a0018d9-d009-48fb-bb95-53196c6fd85c',\n",
-       " 'filepath': 'data_asset/transf_data.csv',\n",
-       " 'data_size': 991039,\n",
-       " 'mime': 'text/csv',\n",
-       " 'summary': ['looked up asset', 'selected attachment', 'overwritten file']}"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#export_filename = 'Transformed_Data.csv'\n",
-    "\n",
-    "export = df2.copy()\n",
-    "#project = Project(project_id=project_id, project_access_token=token)\n",
+    "wslib = access_project_or_space()\n",
     "wslib.save_data(\"transf_data.csv\", df2.to_csv(index=False).encode(),overwrite=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {
     "id": "da1149d7-d2a7-4500-a181-438832f7a4d0",
     "tags": []
@@ -601,7 +954,7 @@
        " 'summary': ['looked up asset', 'selected attachment', 'overwritten file']}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "id": "3b8033927e68452086ea265d1e01cd83",
     "tags": []
@@ -820,7 +1173,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -840,9 +1193,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "bc7f6a03-d962-4940-952f-8e1aab413991"
+   },
+   "outputs": [],
+   "source": [
+    "#help(wslib)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "799ad997-a838-4e30-9c48-0a556e45fcc7"
    },
    "outputs": [],
    "source": []
